--- a/hdph-closure/hdph-closure.cabal
+++ b/hdph-closure/hdph-closure.cabal
@@ -35,7 +35,20 @@ Library
                    containers >= 0.1 && < 0.6,
                    deepseq >= 1.1 && < 2
   hs-source-dirs:  src
-  ghc-options:     -Wall
+
+benchmark closure-bench
+    type:             exitcode-stdio-1.0
+    hs-source-dirs:   src, benchmarks
+    main-is:          Benchmarks.hs 
+    build-depends:    template-haskell,
+                      criterion >= 1.1 && <1.2,
+                      array >= 0.1 && < 0.6,
+                      base >= 4 && < 5,
+                      cereal == 0.4.*,
+                      bytestring == 0.10.*,
+                      containers >= 0.1 && < 0.6,
+                      deepseq >= 1.1 && < 2
+    ghc-options:      
 
 Executable overhead
   main-is:         overhead.hs
