--- a/hdph/hdph.cabal
+++ b/hdph/hdph.cabal
@@ -261,33 +261,33 @@ Executable sum-liouville
   hs-source-dirs:  src
   ghc-options:     -Wall -threaded -rtsopts
 
-Executable mandel
-  main-is:         Test/HdpH/mandel.hs
-  build-depends:   template-haskell,
-                   array >= 0.4 && < 0.6,
-                   base >= 4 && < 5,
-                   binary >= 0.7 && <0.8,
-                   cereal == 0.4.*,
-                   clock >= 0.4.1 && < 0.6,
-                   bytestring == 0.10.*,
-                   containers >= 0.1 && < 0.6,
-                   deepseq >= 1.1 && < 2,
-                   hashable >= 1.2.1 && < 2,
-                   mtl >= 2 && < 3,
-                   monad-par >= 0.3 && < 0.4,
-                   monad-par-extras >= 0.3 && < 0.4,
-                   network >= 2.4 && < 2.7,
-                   network-info == 0.2.*,
-                   network-multicast >= 0.0.7 && < 0.2,
-                   network-transport == 0.4.*,
-                   network-transport-tcp == 0.4.*,
-                   random >= 1 && < 2,
-                   split >= 0.2 && < 3,
-                   time >= 1.2 && < 2,
-                   unix >= 2.6 && < 2.8,
-                   unordered-containers >= 0.1 && < 1,
-                   vector >= 0.10 && < 0.11,
-                   vector-binary-instances >= 0.2 && < 0.3,
-                   hdph-closure >= 0.2.0 && < 0.3
-  hs-source-dirs:  src
-  ghc-options:     -Wall -threaded -rtsopts
+-- Executable mandel
+--   main-is:         Test/HdpH/mandel.hs
+--   build-depends:   template-haskell,
+--                    array >= 0.4 && < 0.6,
+--                    base >= 4 && < 5,
+--                    binary >= 0.7 && <0.8,
+--                    cereal == 0.4.*,
+--                    clock >= 0.4.1 && < 0.6,
+--                    bytestring == 0.10.*,
+--                    containers >= 0.1 && < 0.6,
+--                    deepseq >= 1.1 && < 2,
+--                    hashable >= 1.2.1 && < 2,
+--                    mtl >= 2 && < 3,
+--                    monad-par >= 0.3 && < 0.4,
+--                    monad-par-extras >= 0.3 && < 0.4,
+--                    network >= 2.4 && < 2.7,
+--                    network-info == 0.2.*,
+--                    network-multicast >= 0.0.7 && < 0.2,
+--                    network-transport == 0.4.*,
+--                    network-transport-tcp == 0.4.*,
+--                    random >= 1 && < 2,
+--                    split >= 0.2 && < 3,
+--                    time >= 1.2 && < 2,
+--                    unix >= 2.6 && < 2.8,
+--                    unordered-containers >= 0.1 && < 1,
+--                    vector >= 0.10 && < 0.11,
+--                    vector-binary-instances >= 0.2 && < 0.3,
+--                    hdph-closure >= 0.2.0 && < 0.3
+--   hs-source-dirs:  src
+--   ghc-options:     -Wall -threaded -rtsopts
