--- a/stack.yaml
+++ b/stack.yaml
@@ -1,11 +1,91 @@
 flags:
-  hdph-closure:
-    buildtest: false
+  semigroups:
+    bytestring-builder: false
+  time-locale-compat:
+    old-locale: false
 packages:
 - hdph-closure/
 - hdph/
 - location:
     git: git@github.com:haskell-distributed/network-transport-tcp.git
     commit: c2a316dc93a6d666e5cae61d5676f6a3ec5a7f83
-extra-deps: []
-resolver: lts-3.2
+extra-deps:
+- Glob-0.7.13
+- MonadPrompt-1.0.0.5
+- MonadRandom-0.4.2.3
+- StateVar-1.1.0.4
+- abstract-deque-0.3
+- abstract-par-0.3.3
+- aeson-1.0.2.1
+- ansi-terminal-0.6.2.3
+- ansi-wl-pprint-0.6.7.3
+- attoparsec-0.13.1.0
+- base-compat-0.9.1
+- base-orphans-0.5.4
+- bifunctors-5.4.1
+- blaze-builder-0.4.0.2
+- bytes-0.15.2
+- cassava-0.4.5.1
+- cereal-0.4.1.1
+- clock-0.5.2
+- code-page-0.1.1
+- comonad-5
+- contravariant-1.4
+- criterion-1.1.4.0
+- data-accessor-0.2.2.7
+- distributive-0.5.0.2
+- dlist-0.8.0.2
+- erf-2.0.0.0
+- fail-4.9.0.0
+- flexible-defaults-0.0.1.2
+- hashable-1.2.4.0
+- hashable-extras-0.2.3
+- hastache-0.6.1
+- ieee754-0.7.9
+- js-flot-0.8.3
+- js-jquery-3.1.1
+- log-domain-0.10.3.1
+- math-functions-0.2.1.0
+- mersenne-random-pure64-0.2.2.0
+- monad-loops-0.4.3
+- monad-par-0.3.4.8
+- monad-par-extras-0.3.3
+- mtl-2.2.1
+- mwc-random-0.13.5.0
+- network-2.6.3.1
+- network-info-0.2.0.8
+- network-multicast-0.1.2
+- network-transport-0.4.4.0
+- network-transport-tests-0.2.3.0
+- old-locale-1.0.0.7
+- old-time-1.1.0.3
+- optparse-applicative-0.13.0.0
+- parallel-3.2.1.0
+- parsec-3.1.11
+- primitive-0.6.1.0
+- random-1.1
+- random-fu-0.2.7.0
+- random-shuffle-0.0.4
+- random-source-0.3.0.6
+- rvar-0.2.0.3
+- safecopy-0.8.6
+- scientific-0.3.4.9
+- semigroupoids-5.1
+- semigroups-0.18.2
+- split-0.2.3.1
+- stateref-0.3
+- statistics-0.13.3.0
+- stm-2.4.4.1
+- syb-0.6
+- tagged-0.8.5
+- text-1.2.2.1
+- th-extras-0.0.0.4
+- time-locale-compat-0.1.1.3
+- transformers-compat-0.5.1.4
+- unordered-containers-0.2.7.1
+- vector-0.10.12.3
+- vector-algorithms-0.7.0.1
+- vector-binary-instances-0.2.3.3
+- vector-th-unbox-0.2.1.6
+- void-0.7.1
+resolver: ghc-7.10.3
